Application title added in header. Logo alignment needs to be fixed

--- a/src/sass/demo/demo7/brand/_brand.scss
+++ b/src/sass/demo/demo7/brand/_brand.scss
@@ -5,7 +5,7 @@
 @mixin m-build-brand-base($layout) {	
 	//== General Mode
 	.m-brand {
-		display:  none !important;
+		// display:  none !important;
 	}
 
 	//== Desktop Mode
