--- a/src/sass/demo/xDS7/header/_header.scss
+++ b/src/sass/demo/xDS7/header/_header.scss
@@ -21,7 +21,6 @@
 @include desktop {
 	.m-header {			
 		height: array-get($m-config-header, header, default, height, desktop);
-		padding-left: array-get($m-config-aside, aside-left, self, minimize, width);
 
 		// fixed header mode
 		.m-header--fixed & {
@@ -39,9 +38,14 @@
 			@include transition(array-get($m-config-aside, aside-left, self, minimize, transition));
 			@include shadow(get-shadow(light, '-'));	
 
+			.m-header--static.m-aside-left--fixed & {
+				@include transition(array-get($m-config-aside, aside-left, self, minimize, transition));
+				padding-left: array-get($m-config-aside, aside-left, self, default, width);
+			}
+
 			.m-header--static.m-aside-left--fixed.m-aside-left--minimize & {
 				@include transition(array-get($m-config-aside, aside-left, self, minimize, transition));
-				padding-left: 0
+				padding-left: array-get($m-config-aside, aside-left, self, minimize, width);
 			}
 		}
 
@@ -56,6 +60,28 @@
 			height: array-get($m-config-header, header, default, height, desktop);
 			@include transition(array-get($m-config-header, header, fixed, hidable, transition-show));
 			@include transform(translateY(0));
+		}
+
+		//== Title
+		.m-header-head {
+			.m-header__title {
+				display: table;
+				height: 100%;
+				float: left;
+
+				.m-header__title-text {
+					vertical-align: middle;
+					display: table-cell;			
+					padding: array-get($m-config-header, title, padding, desktop); 
+					color: array-get($m-config-header, title, color);
+					font-size: array-get($m-config-header, title, font-size, desktop);
+					font-weight: get-font-weight(bolder);
+
+					@include minimal-desktop() {
+						padding: array-get($m-config-header, title, padding, min-desktop); 
+					}
+				}
+			}
 		}		
 	}
 }
@@ -103,6 +129,10 @@
 		//== Title
 		.m-header-head {
 			@include shadow(get-shadow(light, '-'));
+			
+			.m-header__title {
+				display: none;
+			}
 		}
 	}
 }
